--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "The name of the application"
   },
   "appDescription": {
-    "message": "Adds timesheet coloring options",
+    "message": "Colorize timesheet rows based on rulesets",
     "description": "The description of the application"
   }
 }
