Add form status messages.

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -66,5 +66,11 @@
   },
   "criterion_error_value_required": {
     "message": "Value is required"
+  },
+  "save_success": {
+    "message": "Settings were saved successfully."
+  },
+  "save_error": {
+    "message": "Settings could not be saved"
   }
 }
